--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,17 +1,21 @@
-{% if latest_question_list %}
-<ul>
-    {% for question in latest_question_list %}
-    <li><a href="{% url 'polls:detail' question.id %}">{{question.question_text}}</a> </li>
-    {% endfor %}
-</ul>
-{% else %}
-<p>
-    Нет вопросов!
-</p>
-{% endif %}
+{% extends 'base_generic.html' %}
 
-{% if user.is_authenticated %}
-    <p>Привет, {{ user.username }}! <a href="{% url 'polls:profile_detail' %}">Мой профиль</a></p>
-{% else %}
-    <p><a href="{% url 'polls:register' %}">Зарегистрироваться</a></p>
-{% endif %}
+{% block title %}Главная{% endblock %}
+
+{% block content %}
+    {% if latest_question_list %}
+        <ul>
+            {% for question in latest_question_list %}
+                <li><a href="{% url 'polls:detail' question.id %}">{{question.question_text}}</a></li>
+            {% endfor %}
+        </ul>
+    {% else %}
+        <p>Нет вопросов!</p>
+    {% endif %}
+
+    {% if user.is_authenticated %}
+        <p>Привет, {{ user.username }}! <a href="{% url 'polls:profile_detail' %}">Мой профиль</a></p>
+    {% else %}
+        <p><a href="{% url 'polls:register' %}">Зарегистрироваться</a></p>
+    {% endif %}
+{% endblock %}
