--- a/templates/registration/profile_detail.html
+++ b/templates/registration/profile_detail.html
@@ -1,9 +1,8 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Профиль</title>
-</head>
-<body>
+{% extends 'base_generic.html' %}
+
+{% block title %}Главная{% endblock %}
+
+{% block content %}
     <h2>Профиль пользователя: {{ user.username }}</h2>
     <p>Email: {{ user.email }}</p>
     {% if user.avatar %}
@@ -12,5 +11,4 @@
     <p><a href="{% url 'polls:profile_update' %}">Редактировать профиль</a></p>
     <p><a href="{% url 'polls:profile_delete' %}">Удалить профиль</a></p>
     <p><a href="{% url 'polls:index' %}">На главную</a></p>
-</body>
-</html>
+{%endblock%}
