--- a/templates/base_generic.html
+++ b/templates/base_generic.html
@@ -12,19 +12,18 @@
             <div class="container">
                 <a class="navbar-brand" href="{% url 'polls:index' %}">Мой сайт</a>
                 <div class="navbar-nav ms-auto">
-                    <a class="nav-link" href="{% url 'polls:index' %}">Главная</a>
                     {% if user.is_authenticated %}
                         <a class="nav-link" href="{% url 'polls:profile_detail' %}">Профиль</a>
                         <a class="nav-link" href="{% url 'polls:profile_update' %}">Редактировать</a>
                         <a class="nav-link" href="{% url 'polls:profile_delete' %}">Удалить</a>
                     {% else %}
-                        <a class="nav-link" href="{% url 'polls:register' %}">Регистрация</a>
+                        <a class="nav-link" href="{% url 'login' %}">Войти</a>
                     {% endif %}
                 </div>
             </div>
         </nav>
     </header>
-    <main>
+    <main class="container">
         {% block content %}
         {% endblock %}
     </main>
