--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -1,6 +1,6 @@
 {% extends 'base_generic.html' %}
 
-{% block title %}Главная{% endblock %}
+{% block title %}Регистрация{% endblock %}
 
 {% block content %}
     <h2>Регистрация</h2>
