--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -1,21 +1,33 @@
-{% extends 'base_generic.html' %}
-
-{% block title %}Главная{% endblock %}
+{% extends "base_generic.html" %}
 
 {% block content %}
-    <form action="{% url 'polls:vote' question.id %}" method="post">
-        {% csrf_token %}
-        <fieldset>
-            <legend>
-                <h1>{{question.question_text}}</h1>
-            </legend>
-            {% if error_message %}<p><strong> {{error_message}}</strong></p>{% endif %}
-            {% for choice in question.choice_set.all %}
-            <input type="radio" name="choice" id="choice{{forloop.counter}}" value="{{choice.id}}">
-            <label for="choice{{forloop.counter}}">{{choice.choice_text}}</label><br>
-            {% endfor %}
-        </fieldset>
-    <input type="submit" value="Vote">
-    </form>
+  <h1>{{ question.question_text }}</h1>
 
-{%endblock%}
+  {% if question.description_full %}
+    <p>{{ question.description_full }}</p>
+  {% endif %}
+
+  {% if question.image %}
+    <img src="{{ question.image.url }}" alt="Изображение к вопросу">
+  {% endif %}
+
+  {% if question.is_expired %}
+    <p>Этот опрос истёк.</p>
+  {% elif user.is_authenticated %}
+    {% if not has_voted %}  <!-- 👈 Изменено -->
+      <form action="{% url 'polls:vote' question.id %}" method="post">
+        {% csrf_token %}
+        {% for choice in question.choice_set.all %}
+          <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}">
+          <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label><br>
+        {% endfor %}
+        <input type="submit" value="Голосовать">
+      </form>
+    {% else %}
+      <p>Вы уже голосовали за этот вопрос.</p>
+      <a href="{% url 'polls:results' question.id %}">Посмотреть результаты</a>
+    {% endif %}
+  {% else %}
+    <p><a href="{% url 'login' %}">Войдите</a>, чтобы голосовать.</p>
+  {% endif %}
+{% endblock %}
