--- a/templates/base_generic.html
+++ b/templates/base_generic.html
@@ -16,6 +16,7 @@
                         <a class="nav-link" href="{% url 'polls:profile_detail' %}">Профиль</a>
                         <a class="nav-link" href="{% url 'polls:profile_update' %}">Редактировать</a>
                         <a class="nav-link" href="{% url 'polls:profile_delete' %}">Удалить</a>
+                        <a class="nav-link" href="{% url 'polls:create_question' %}">Создать опрос</a>
                     {% else %}
                         <a class="nav-link" href="{% url 'login' %}">Войти</a>
                     {% endif %}
