--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -11,7 +11,7 @@
             <p>{{ question.description_short }}</p>
           {% endif %}
           {% if question.image %}
-            <img src="{{ question.image.url }}" alt="Изображение к вопросу" style="max-width: 200px;">
+            <img src="{{ question.image.url }}" alt="Изображение к вопросу">
           {% endif %}
         </li>
       {% endfor %}
