--- a/templates/base_generic.html
+++ b/templates/base_generic.html
@@ -14,11 +14,16 @@
                 <div class="navbar-nav ms-auto">
                     {% if user.is_authenticated %}
                         <a class="nav-link" href="{% url 'polls:profile_detail' %}">Профиль</a>
+                        <form method="post" action="{% url 'logout' %}">
+                            {% csrf_token %}
+                            <button type="submit" class="nav-link">Выйти</button>
+                        </form>
                         <a class="nav-link" href="{% url 'polls:profile_update' %}">Редактировать</a>
                         <a class="nav-link" href="{% url 'polls:profile_delete' %}">Удалить</a>
                         <a class="nav-link" href="{% url 'polls:create_question' %}">Создать опрос</a>
                     {% else %}
                         <a class="nav-link" href="{% url 'login' %}">Войти</a>
+                        <a class="nav-link" href="{% url 'polls:register' %}">Регистрация</a>
                     {% endif %}
                 </div>
             </div>
